fixed the dark mode color change issue in css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,14 +23,8 @@ svg {
   height: 100%;
   /* width: 100%; */
 }
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background: #F2F9FF !important;
 }
